--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #aa91ae;
+      background-color: lightblue;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -52,9 +52,12 @@
     <h2>Dependencies</h2>
 <p>Python 2.7+</p>
 <h2>Authors</h2>
-<p>Phillip Marshall (phillip@wizpig64.com)<br/><br/>      </p>
+<p>Phillip Marshall (phillip@wizpig64.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Phillip Marshall (phillip@wizpig64.com)<br/>      </p>
+<p>Phillip Marshall (phillip@wizpig64.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
